# are-we-sdd-yet

./: Cargo.toml  Dockerfile  README.md  cnf2obdd.Dockerfile  compose.yml  cudd.Dockerfile  rsdd.Dockerfile  sdd.Dockerfile
.github/workflows/: ci.yml
cnf2obdd/: main.c
fixtures/cnf/: c8-very-easy.cnf  cht.cnf  cm152a.cnf  s208.1.scan.cnf  tiny2.cnf  x2.cnf
sdd-package-2.0/libsdd-2.0/: SConstruct
sdd-package-2.0/sdd-2.0/src/: main.c
www/: index.html  output.json
