[package]
name = "are-we-sdd-yet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
# bin-specific
rsdd = { git = "https://github.com/neuppl/rsdd" }
cudd-sys = { version = "1.0.0" }

[[bin]]
name = "are_we_sdd_yet"
path = "bin/are_we_sdd_yet.rs"

[[bin]]
name = "cudd"
path = "bin/cudd.rs"

[[bin]]
name = "rsdd"
path = "bin/rsdd.rs"
